--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.26 【今日阅读】https://mdalmijn.com/11-laws-of-software-estimation-for-complex-work/ Ask yourself the following question: does it matter if you’re able to predict exactly when something is finished? If you’re confident you’re making the best progress you can towards delivering something valuable, does it make a difference if it’s slower than you expected if that expectation was always flawed and imprecise to begin with?
+
 9.25 【今日阅读】https://boyter.org/posts/expert-excuses-for-not-writing-unit-tests/  Expert Excuses for Not Writing Unit Tests
 
 9.24 【今日阅读】https://zhuanlan.zhihu.com/p/567630362 获取 C++ WebAssembly 的 stacktrace
