--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.28 【今日阅读】https://www.researchgate.net/publication/318020000_Searching_for_behavioural_bugs_with_stateful_test_oracles_in_web_crawlers Testing modern web applications, so called "Web 2.0" applications has become more difficult due to their "stateful" nature, so the development of an approach capable of testing these applications in order to detect these bugs has become a necessity. The paper presents an automated approach for testing these dynamic web applications, where a combination of dynamic crawling and back-end testing is used to automatically detect behavioural bugs.
+
 9.27 【今日阅读】https://maskray.me/blog/2022-09-25-layering-check-with-clang 用 bazel 解锁 clang 的 module 支持：Bazel generates .cppmap module files from deps attributes. hdrs and textual_hdrs files are converted to textual header declarations while srcs headers are converted to private textual header declarations. deps attributes are converted to use declarations.
 
 9.26 【今日阅读】https://mdalmijn.com/11-laws-of-software-estimation-for-complex-work/ Ask yourself the following question: does it matter if you’re able to predict exactly when something is finished? If you’re confident you’re making the best progress you can towards delivering something valuable, does it make a difference if it’s slower than you expected if that expectation was always flawed and imprecise to begin with?
