--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.30 【今日阅读】https://swlaschin.gitbooks.io/fsharpforfunandprofit/content/series/designing-with-types.html Designing with types
+
 9.29 【今日阅读】https://zhuanlan.zhihu.com/p/568859928 调试有状态系统所需要的工具
 
 9.28 【今日阅读】https://www.researchgate.net/publication/318020000_Searching_for_behavioural_bugs_with_stateful_test_oracles_in_web_crawlers Testing modern web applications, so called "Web 2.0" applications has become more difficult due to their "stateful" nature, so the development of an approach capable of testing these applications in order to detect these bugs has become a necessity. The paper presents an automated approach for testing these dynamic web applications, where a combination of dynamic crawling and back-end testing is used to automatically detect behavioural bugs.
