--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.8 【今日阅读】https://matklad.github.io/2022/10/06/hard-mode-rust.html because allocating resources becomes easy, RAII encourages a sloppy attitude to resources, where they are allocated and destroyed all over the place
+
 9.30 【今日阅读】https://swlaschin.gitbooks.io/fsharpforfunandprofit/content/series/designing-with-types.html Designing with types
 
 9.29 【今日阅读】https://zhuanlan.zhihu.com/p/568859928 调试有状态系统所需要的工具
