--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.10 【今日阅读】https://zhuanlan.zhihu.com/p/571920491 从信息量的角度看监控调试类工具
+
 10.9 【今日阅读】https://www.informit.com/articles/article.aspx?p=31575&seqNum=4 This section presents a historical perspective on JMX, covering the precursor specifications and products, Sun's JMAPI and JDMK, the JMX JSR and current specifications, compliance levels, and a review of some of the current implementations.
 
 10.8 【今日阅读】https://matklad.github.io/2022/10/06/hard-mode-rust.html because allocating resources becomes easy, RAII encourages a sloppy attitude to resources, where they are allocated and destroyed all over the place
