--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.12 【今日阅读】https://verdagon.dev/blog/when-to-use-memory-safe-part-1 Safety in Non-Memory-Safe Languages
+
 10.11 【今日阅读】https://adamj.eu/tech/2022/06/17/mike-actons-expectations-of-professional-software-engineers/ Mike Acton’s Expectations of Professional Software Engineers
 
 10.10 【今日阅读】https://zhuanlan.zhihu.com/p/571920491 从信息量的角度看监控调试类工具
