--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.13 【今日阅读】https://lobste.rs/s/jktewn/zig_style_generics_are_not_well_suited_for I usually skip posts tagged PLT because they tend to be all about bikeshedding why choosing a particular order for type signatures is not sufficiently ellegant as it doesn’t match the order of isomorphic arguments of linear lambda types or whatever, but something drew me to this one. The fluffy title actually hides a pretty solid article that’s really about the impact of various choices over compiler and tooling efficiency, rather than whether Zig-style generics matches the author’s opinion about how generics ought to be implemented and what behaviour should be the default one. Many of the points that the author makes are anchored in practical experience with large codebases (and tooling for working with large code bases) in other languages, rather than a toy hash table implementation.
+
 10.12 【今日阅读】https://verdagon.dev/blog/when-to-use-memory-safe-part-1 Safety in Non-Memory-Safe Languages
 
 10.11 【今日阅读】https://adamj.eu/tech/2022/06/17/mike-actons-expectations-of-professional-software-engineers/ Mike Acton’s Expectations of Professional Software Engineers
