--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+10.18 【今日阅读】https://www.youtube.com/watch?v=US8QG9I1XW0&ab_channel=NDCConferences Functional architecture - The pits of success
+
+10.17 【今日阅读】http://www.huzheng.org/bookstore/TheTaoOfProgramming.pdf 一个好的农民不会不管他的庄稼。一个好的老师不会不管哪怕是最差的学生。一个好的父亲不会让他的任何一个孩子挨饿。一个好的程序员不应拒绝维护他的程序。
+
 10.16 【今日阅读】https://lobste.rs/s/jcx49z/database_without_dynamic_memory static allocation is a forcing function. It helps us as programmers to think through all aspects of resource usage upfront, for all these reasons. Anecdotally, we also find that these constraints lead to better, simpler designs. You get a much crisper mental model of the system at play.
 
 10.15 【今日阅读】https://www.pm.inf.ethz.ch/research/prusti.html Formal verification of system software is notoriously difficult and requires complex specifications and logics (such as separation logic) to reason about pointers, aliasing, and side effects on mutable state.
