--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.19 【今日阅读】https://download.swift.org/docs/assets/generics.pdf This is a book about the implementation of generic programming in Swift. While it is primarily meant to be a reference for Swift compiler contributors, it should also be of interest to other language designers, type system researchers, and even just curious Swift programmers
+
 10.18 【今日阅读】https://www.youtube.com/watch?v=US8QG9I1XW0&ab_channel=NDCConferences Functional architecture - The pits of success
 
 10.17 【今日阅读】http://www.huzheng.org/bookstore/TheTaoOfProgramming.pdf 一个好的农民不会不管他的庄稼。一个好的老师不会不管哪怕是最差的学生。一个好的父亲不会让他的任何一个孩子挨饿。一个好的程序员不应拒绝维护他的程序。
