--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,9 @@
+10.23 【今日阅读】https://www.youtube.com/watch?v=hXnS_Xjwk2Y Writing test cases is laborious, often a little neglected, and ultimately rather unsatisfying, since errors slip through even the most comprehensive test suites. Can we generate tests instead? In this talk I’ll show test case generation using QuickCheck, drawing on experience of applying it at scale at Quviq. I’ll try to explain why property-based testing can be so effective, and how to use it most effectively.
+
+10.22 【今日阅读】https://matduggan.com/why-are-containers-insecure-by-default/ It always starts the same way. A demo is shown where a previously complex problem set is reduced down to running one Magic Tool. It is often endorsed by one of the Big Tech Companies or maintained by them. Some members of the organization start calling for the immediate adoption of this technology.  Overnight this new tool becomes a shorthand for "solution to all of our problems".
+
+10.21 【今日阅读】https://wix-ux.com/when-life-gives-you-lemons-write-better-error-messages-46c5223e1a2f Error messages are part of our daily lives online. Every time a server is down or we don’t have internet, or we forget to add some info in a form, we get an error message. “Something went wrong” is the classic. But what went wrong? What happened? And, most importantly, how can I fix it?
+
 10.20 【今日阅读】https://github.com/wolfpld/tracy https://tracy.nereid.pl/ Frame Trace & Memory Allocation visualizer
 
 10.19 【今日阅读】https://download.swift.org/docs/assets/generics.pdf This is a book about the implementation of generic programming in Swift. While it is primarily meant to be a reference for Swift compiler contributors, it should also be of interest to other language designers, type system researchers, and even just curious Swift programmers
