--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.24 【今日阅读】https://ahgamut.github.io/2022/10/23/debugging-c-with-cosmo/ Cosmopolitan Libc provides a suite of debugging features that enhance the C development experience: function call tracing, gdb integration, an ASAN/UBSAN runtime, and more
+
 10.23 【今日阅读】https://www.youtube.com/watch?v=hXnS_Xjwk2Y Writing test cases is laborious, often a little neglected, and ultimately rather unsatisfying, since errors slip through even the most comprehensive test suites. Can we generate tests instead? In this talk I’ll show test case generation using QuickCheck, drawing on experience of applying it at scale at Quviq. I’ll try to explain why property-based testing can be so effective, and how to use it most effectively.
 
 10.22 【今日阅读】https://matduggan.com/why-are-containers-insecure-by-default/ It always starts the same way. A demo is shown where a previously complex problem set is reduced down to running one Magic Tool. It is often endorsed by one of the Big Tech Companies or maintained by them. Some members of the organization start calling for the immediate adoption of this technology.  Overnight this new tool becomes a shorthand for "solution to all of our problems".
