--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.25 【今日阅读】https://blog.ploeh.dk/2022/10/24/encapsulation-in-functional-programming/ Functional programmers may not use the term encapsulation much, but that doesn't mean that they don't share that kind of concern. They often throw around the phrase make illegal states unrepresentable or talk about smart constructors or partial versus total functions. It's clear that they care about data modelling that prevents mistakes.
+
 10.24 【今日阅读】https://ahgamut.github.io/2022/10/23/debugging-c-with-cosmo/ Cosmopolitan Libc provides a suite of debugging features that enhance the C development experience: function call tracing, gdb integration, an ASAN/UBSAN runtime, and more
 
 10.23 【今日阅读】https://www.youtube.com/watch?v=hXnS_Xjwk2Y Writing test cases is laborious, often a little neglected, and ultimately rather unsatisfying, since errors slip through even the most comprehensive test suites. Can we generate tests instead? In this talk I’ll show test case generation using QuickCheck, drawing on experience of applying it at scale at Quviq. I’ll try to explain why property-based testing can be so effective, and how to use it most effectively.
