--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.26 【今日阅读】https://github.com/vadimcn/vscode-lldb/blob/master/MANUAL.md#reverse-debugging Also known as Time travel debugging. Provided you use a debugging backend that supports these commands, CodeLLDB be used to control reverse execution and stepping. As of this writing, the only backend known to work is Mozilla's rr. The minimum supported version is 5.3.0.
+
 10.25 【今日阅读】https://blog.ploeh.dk/2022/10/24/encapsulation-in-functional-programming/ Functional programmers may not use the term encapsulation much, but that doesn't mean that they don't share that kind of concern. They often throw around the phrase make illegal states unrepresentable or talk about smart constructors or partial versus total functions. It's clear that they care about data modelling that prevents mistakes.
 
 10.24 【今日阅读】https://ahgamut.github.io/2022/10/23/debugging-c-with-cosmo/ Cosmopolitan Libc provides a suite of debugging features that enhance the C development experience: function call tracing, gdb integration, an ASAN/UBSAN runtime, and more
