--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.29 【今日阅读】https://www.shadertoy.com/view/MddGzf 完全跑在 GPU 里的游戏，用 webgl shader 编写
+
 10.28 【今日阅读】https://security.apple.com/blog/towards-the-next-generation-of-xnu-memory-safety/ Without any specialized hardware assistance like Arm Memory Tagging Extension (MTE), practical state-of-the-art mitigations for temporal safety issues revolve around type isolation or sequestering. The core principle of type isolation is that after any particular address has been used for a given “type” of object, only objects of that type can ever exist at that address for the lifetime of the program.
 
 10.27 【今日阅读】https://jrsinclair.com/articles/2022/what-if-the-team-hates-my-functional-code/ We’ve now written this code five different ways. But notice what we haven’t done. We haven’t introduced any side effects. We’re still working with pure functions that each do one small thing. We haven’t added any shared mutable state. And because we haven’t done these things, we can still be confident about our code. It’s still easy to test. It’s still ‘functional.’
