--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.31 【今日阅读】https://github.com/benwr/soanm When you install a new operating system on some machine, whether it's a server, a laptop, a desktop, or a VM, it can be a hassle to get to the point of feeling comfortable on that machine. https://github.com/benwr/soanm/tree/main/test_conf
+
 10.30 【今日阅读】https://lobste.rs/s/1640ea/early_speed_optimizations_aren_t Another way to put it: Using the right Big O is never a premature optimization.
 
 10.29 【今日阅读】https://www.shadertoy.com/view/MddGzf 完全跑在 GPU 里的游戏，用 webgl shader 编写
