--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,9 @@
+11.5 【今日阅读】https://determinate.systems/posts/nix-direnv Effortless dev environments with Nix and direnv
+
+11.4 【今日阅读】https://lobste.rs/s/ookgy7/how_do_you_sync_code_between_personal I have a desktop and a laptop and I’d like to keep some code in sync between the two. How do you handle this?
+
+11.3 【今日阅读】https://spectrum.ieee.org/functional-programming YOU’D EXPECT the longest and most costly phase in the lifecycle of a software product to be the initial development of the system, when all those great features are first imagined and then created. In fact, the hardest part comes later, during the maintenance phase. That’s when programmers pay the price for the shortcuts they took during development.
+
 11.2 【今日阅读】https://www.copetti.org/writings/consoles/  While conventional PCs tend to evolve ‘incrementally’, new generations of consoles introduce completely new ways of working. What you see here is a series of articles that will hopefully uncover the rationale behind the latest trends in technology.
 
 11.1 【今日阅读】https://github.com/ema/pets The idea behind Pets is that Configuration Management of individual hosts shouldn’t be harder than administering the system by hand. Other configuration management tools typically focus on usage scenarios involving complex relationships between multiple, fairly homogeneous systems. Pets instead focuses on the individual, local machine.
