--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.6 【今日阅读】https://brunoluiz.net/blog/2022/aug/imagewand-privacy-first-image-conversion-experiment-with-golang-and-wasm/ golang goroutine + javascript promise
+
 11.5 【今日阅读】https://determinate.systems/posts/nix-direnv Effortless dev environments with Nix and direnv
 
 11.4 【今日阅读】https://lobste.rs/s/ookgy7/how_do_you_sync_code_between_personal I have a desktop and a laptop and I’d like to keep some code in sync between the two. How do you handle this?
