--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,10 @@
+11.9 【今日阅读】https://news.ycombinator.com/item?id=33519414 The pursuit of realism hit diminishing returns years ago; the manpower needed to make a game hyper-realistic isn't justified by the number of additional sales it will produce. Instead of becoming more realistic, most games have instead focused on having more bright neon particles swirling around on screen. That's much cheaper and much more effective than chasing further realism.
+This will likely change in the near future as the industry invents ways to replace human modelers, texture artists, etc, with automated "AI" tools.
+
+11.8 【今日阅读】https://brunoluiz.net/blog/2022/aug/imagewand-privacy-first-image-conversion-experiment-with-golang-and-wasm/ golang goroutine + javascript promise
+
+11.7 【今日阅读】https://pragprog.com/titles/atcrime/your-code-as-a-crime-scene/ Your Code as a Crime Scene Use Forensic Techniques to Arrest Defects, Bottlenecks, and Bad Design in Your Programs
+
 11.6 【今日阅读】https://brunoluiz.net/blog/2022/aug/imagewand-privacy-first-image-conversion-experiment-with-golang-and-wasm/ golang goroutine + javascript promise
 
 11.5 【今日阅读】https://determinate.systems/posts/nix-direnv Effortless dev environments with Nix and direnv
