--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.10 【今日阅读】https://model-checking.github.io/kani-verifier-blog/2022/10/27/using-kani-with-the-bolero-property-testing-framework.html One question that might arise is: is there any point in using fuzzing alongside Kani? In other words, if we can prove a harness for all inputs with Kani, would we still want to use fuzzing? The answer is yes, because fuzzing and Kani provide complementary benefits.
+
 11.9 【今日阅读】https://news.ycombinator.com/item?id=33519414 The pursuit of realism hit diminishing returns years ago; the manpower needed to make a game hyper-realistic isn't justified by the number of additional sales it will produce. Instead of becoming more realistic, most games have instead focused on having more bright neon particles swirling around on screen. That's much cheaper and much more effective than chasing further realism.
 This will likely change in the near future as the industry invents ways to replace human modelers, texture artists, etc, with automated "AI" tools.
 
