--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.14 【今日阅读】https://deathbykeystroke.com/articles/20220517-business-processes-as-types-lets-explore.html We need a different way of thinking about our problems, it's very familiar but a weird concept in programming to think: "we'll try to do something, see if there's an error, try to do something else, see if there's an error" and so on. Let's start thinking about problems in a way that is "let's perform some setup, try to perform our process, and then handle any errors that happened at any point during the operation".
+
 11.12 【今日阅读】https://www.jetpack.io/ Jetpack builds tools that make cloud development a delightful experience. Whether it’s setting up development environments, or deploying to Kubernetes, we’ve got you covered.
 
 11.11 【今日阅读】https://liuliu.me/eyes/stretch-iphone-to-its-limit-a-2gib-model-that-can-draw-everything-in-your-pocket/ The original Stable Diffusion open-source version cannot run on a 8GiB card.  The main challenge is to run the app on the 6GiB RAM iPhone devices. 6GiB sounds a lot, but iOS will start to kill your app if you use more than 2.8GiB on a 6GiB device, and more than 2GiB on a 4GiB device.
