--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,13 @@
+11.19 【今日阅读】https://devenv.sh/ Build, share, and run your local development environments with a single command. Without containers.
+
+11.18 【今日阅读】https://sapling-scm.com Sapling provides convenient methods for stacking, iterating on, and submitting your work for code review. It removes the hassle of branches and the dreaded "detached HEAD" state.
+
+11.17 【今日阅读】https://verdagon.dev/blog/zero-cost-memory-safety-regions-overview A region is a grouping of data that we can freeze and unfreeze as one, to make it either "mutable" or "immutable".
+
+11.16 【今日阅读】https://queue.acm.org/detail.cfm?id=3570920 Two teams of five is not the same as one team of ten.
+
+11.15 【今日阅读】https://buttondown.email/hillelwayne/archive/why-do-we-call-it-boilerplate-code/ Why do we call it "boilerplate code?"
+
 11.14 【今日阅读】https://deathbykeystroke.com/articles/20220517-business-processes-as-types-lets-explore.html We need a different way of thinking about our problems, it's very familiar but a weird concept in programming to think: "we'll try to do something, see if there's an error, try to do something else, see if there's an error" and so on. Let's start thinking about problems in a way that is "let's perform some setup, try to perform our process, and then handle any errors that happened at any point during the operation".
 
 11.12 【今日阅读】https://www.jetpack.io/ Jetpack builds tools that make cloud development a delightful experience. Whether it’s setting up development environments, or deploying to Kubernetes, we’ve got you covered.
