--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+11.21 【今日阅读】https://maskray.me/blog/2021-12-19-why-isnt-ld.lld-faster LLD is the LLVM linker. Its ELF port is typically installed as ld.lld. This article makes an in-depth analysis of ld.lld's performance. The topic has been in my mind for a while. Recently Rui Ueyama released mold 1.0 and people wonder why with multi-threading its ELF port is faster than ld.lld. So I finally completed the article.
+
+11.20 【今日阅读】https://edoput.it/2022/11/18/hypothesis.html Normal “automated” software testing is surprisingly manual. Every scenario the computer runs, someone had to write by hand. Hypothesis can fix this.
+
 11.19 【今日阅读】https://devenv.sh/ Build, share, and run your local development environments with a single command. Without containers.
 
 11.18 【今日阅读】https://sapling-scm.com Sapling provides convenient methods for stacking, iterating on, and submitting your work for code review. It removes the hassle of branches and the dreaded "detached HEAD" state.
