--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.22 【今日阅读】https://www.baldurbjarnason.com/2022/wtf-is-a-framework/ WTF do you mean when you say ‘framework’?
+
 11.21 【今日阅读】https://maskray.me/blog/2021-12-19-why-isnt-ld.lld-faster LLD is the LLVM linker. Its ELF port is typically installed as ld.lld. This article makes an in-depth analysis of ld.lld's performance. The topic has been in my mind for a while. Recently Rui Ueyama released mold 1.0 and people wonder why with multi-threading its ELF port is faster than ld.lld. So I finally completed the article.
 
 11.20 【今日阅读】https://edoput.it/2022/11/18/hypothesis.html Normal “automated” software testing is surprisingly manual. Every scenario the computer runs, someone had to write by hand. Hypothesis can fix this.
