--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+11.24 【今日阅读】https://diataxis.fr/ The Diátaxis framework aims to solve the problem of structure in technical documentation. It adopts a systematic approach to understanding the needs of documentation users in their cycle of interaction with a product. Diátaxis identifies four modes of documentation - tutorials, how-to guides, technical reference and explanation. It derives its structure from the relationship between them.
+
+11.23 【今日阅读】https://matthewtejo.substack.com/p/why-twitter-didnt-go-down-from-a Twitter supposedly lost around 80% of its work force. What ever the real number is, there are whole teams with out engineers on it now. Yet, the website goes on and the tweets keep coming. This left a lot wondering what exactly was going on with all those engineers and made it seem like it was all just bloat.
+
 11.22 【今日阅读】https://www.baldurbjarnason.com/2022/wtf-is-a-framework/ WTF do you mean when you say ‘framework’?
 
 11.21 【今日阅读】https://maskray.me/blog/2021-12-19-why-isnt-ld.lld-faster LLD is the LLVM linker. Its ELF port is typically installed as ld.lld. This article makes an in-depth analysis of ld.lld's performance. The topic has been in my mind for a while. Recently Rui Ueyama released mold 1.0 and people wonder why with multi-threading its ELF port is faster than ld.lld. So I finally completed the article.
