--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,16 @@
+11.28 【今日阅读】https://osquery.io/ Osquery uses basic SQL commands to leverage a relational data-model to describe a device.
+
+11.27 【今日阅读】https://surfingcomplexity.blog/2022/11/24/writing-docs-well-why-should-a-software-engineer-care/ Writing docs well: why should a software engineer care?
+
+11.26 【今日阅读】https://blog.andrewbrey.com/2022-10-12-your-monorepo-dependencies-are-asking-for-trouble/ Your Monorepo Dependencies Are Asking for Trouble
+
+11.25 【今日阅读】https://www.yet-another-blog.com/porting_the_game_to_jai_part0/ my plan to porting is the following:
+Copy a small piece of code from D or C++ to jai and make it compile.
+Call the new jai code instead of the old D or C++ code.
+Replay a recorded game session.
+If the replay diverged, porting introduced a bug. Fix the bug.
+If the replay didn’t diverge, porting was successful. repeat.
+
 11.24 【今日阅读】https://diataxis.fr/ The Diátaxis framework aims to solve the problem of structure in technical documentation. It adopts a systematic approach to understanding the needs of documentation users in their cycle of interaction with a product. Diátaxis identifies four modes of documentation - tutorials, how-to guides, technical reference and explanation. It derives its structure from the relationship between them.
 
 11.23 【今日阅读】https://matthewtejo.substack.com/p/why-twitter-didnt-go-down-from-a Twitter supposedly lost around 80% of its work force. What ever the real number is, there are whole teams with out engineers on it now. Yet, the website goes on and the tweets keep coming. This left a lot wondering what exactly was going on with all those engineers and made it seem like it was all just bloat.
