--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,11 @@
+12.2 【今日阅读】https://www.jetpack.io/blog/do-repeat-yourself-global-packages-considered-harmful/ We took the convenience of virtual environments, the UX of npm, and the immutability of NixOS to create this magical local-like experience with Devbox.
+
+12.1 【今日阅读】https://jakelazaroff.com/words/tailwind-is-a-leaky-abstraction/ Tailwind is commonly described as “utility classes”, but that's a bit of an understatement. It's essentially a small language you write in the class attributes of your HTML that compiles to a combination of CSS rules and selectors — an abstraction over CSS. But all abstractions leak, and Tailwind is very leaky.
+
+11.30 【今日阅读】https://r2c.dev/blog/2022/static-analysis-speed/ Program analysis is an extremely interesting discipline that aims to combine an impossible task (finding undesirable parts of programs) with practical usage (being useful to developers to fix their code). Practical usage takes many forms ranging from convenience of information and quality of findings to the speed at which the analysis is carried out.
+
+11.29 【今日阅读】https://zhuanlan.zhihu.com/p/585251693 尝试总结一些持续维护项目变得难以维护的原因，以及如何设计才能保持良好的可维护性。
+
 11.28 【今日阅读】https://osquery.io/ Osquery uses basic SQL commands to leverage a relational data-model to describe a device.
 
 11.27 【今日阅读】https://surfingcomplexity.blog/2022/11/24/writing-docs-well-why-should-a-software-engineer-care/ Writing docs well: why should a software engineer care?
