--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.3 【今日阅读】https://github.com/CMU-program-analysis/CMU-program-analysis.github.io/blob/master/2022/lecture-slides/01-introduction.pdf Program analysis slides
+
 12.2 【今日阅读】https://www.jetpack.io/blog/do-repeat-yourself-global-packages-considered-harmful/ We took the convenience of virtual environments, the UX of npm, and the immutability of NixOS to create this magical local-like experience with Devbox.
 
 12.1 【今日阅读】https://jakelazaroff.com/words/tailwind-is-a-leaky-abstraction/ Tailwind is commonly described as “utility classes”, but that's a bit of an understatement. It's essentially a small language you write in the class attributes of your HTML that compiles to a combination of CSS rules and selectors — an abstraction over CSS. But all abstractions leak, and Tailwind is very leaky.
