--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,11 @@
+12.7 【今日阅读】https://github.com/google/go-flow-levee An input program's data flow is explored using a combination of pointer analysis, static single assignment analysis, and taint analysis. "Sources" must not reach "sinks" without first passing through a "sanitizer." Additionally, source data can "taint" neighboring variables during a "propagation" function call, such as writing a source to a string. Such tainted variables also must not reach any sink.
+
+12.6 【今日阅读】https://driftingin.space/posts/you-might-not-need-a-crdt Although CRDTs aren’t always the best solution for always-online collaborative apps, it’s still fascinating tech that has real use cases. Apps that need to run offline in general are good candidates for CRDTs.
+
+12.5 【今日阅读】https://stayrelevant.globant.com/en/technology/agile-delivery/active-knowledge-in-software-development/ Our knowledge of the old work fades away when we move on to other work. Sometimes we have crystal clear memory, but essential details fade from our memory when we aren’t reminded of them in a work context. This fading happens at the individual level but also at the level of teams and organizations. If a person leaves a team, the part of the team’s active knowledge that person had is effectively gone if it wasn’t generated through shared work.
+
+12.4 【今日阅读】https://lobste.rs/s/tuz3tu/twenty_five_thousand_dollars_funny_money I don’t think that creating distinct types for “dollars” and “pennies” is a very good idea, although I realize this is the fix that the article proposes.
+
 12.3 【今日阅读】https://github.com/CMU-program-analysis/CMU-program-analysis.github.io/blob/master/2022/lecture-slides/01-introduction.pdf Program analysis slides
 
 12.2 【今日阅读】https://www.jetpack.io/blog/do-repeat-yourself-global-packages-considered-harmful/ We took the convenience of virtual environments, the UX of npm, and the immutability of NixOS to create this magical local-like experience with Devbox.
