--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,26 @@
+12.13 【今日阅读】https://concerningquality.com/models/ I’ve become a bit model-obsessed as of late. By “model,” I mean a simplified representation of a program. No databases. No HTTP. Just pure logic. What interests me so much about models is that they exemplify software minimalism. We often talk about essential vs. accidental complexity - well, models are the embodiment of the essential. We have an ongoing battle against complexity at the language level, with tons of new languages providing support for immutability, reference sharing control, and other features of modern semantics. But I can’t help but still ask: is it really enough? Is software really getting any simpler?
+
+12.12 【今日阅读】https://github.com/facebookresearch/metaseq/blob/main/projects/OPT/chronicles/README.md logbook from training the GPT-3 sized OPT model
+
+12.11 【今日阅读】https://news.ycombinator.com/item?id=33934580 The biggest problem facing the front-end space today isn't so much of complexity of a particular library, rendering technique, or view/model architecture, but rather lots of bad ideas glued together, creating nightmare scenarios for companies trying to maintain products.
+A micro dependency system with never ending breaking changes to glue different tools and libraries together - bad idea.
+
+Using un-opinionated "libraries" that don't scale well, but at scale - bad idea.
+
+Technology organizations trying to stay relevant by simply adopting every next hyped fad out there, rather than stepping back to get a bigger picture of what the front-end space actually needs - bad idea.
+
+The list goes on, for quite a long time.
+
+And all of these issues are further exacerbated by an army of junior developers entering the front-end development space, along with recruiters subscribing to buzzwords to hire them.
+
+12.10 【今日阅读】https://jvns.ca/blog/2022/12/08/a-debugging-manifesto/ A debugging manifesto
+
+12.9 【今日阅读】https://asahilinux.org/2022/12/gpu-drivers-now-in-asahi-linux/ Of course, we couldn’t build an OpenGL driver in under two years just ourselves. Thanks to the power of free and open source software, we stand on the shoulders of FOSS giants. The compiler implements a “NIR” backend, where NIR is a powerful intermediate representation, including GLSL to NIR translation. The kernel driver users the “Direct Rendering Manager” (DRM) subsystem of the Linux kernel to minimize boilerplate. Finally, the OpenGL driver implements the “Gallium3D” API inside of Mesa, the home for open source OpenGL and Vulkan drivers. Through Mesa and Gallium3D, we benefit from thirty years of OpenGL driver development, with common code translating OpenGL into the much simpler Gallium3D. Thanks to the incredible engineering of NIR, Mesa, and Gallium3D, our ragtag team of reverse-engineers can focus on what’s left: the Apple hardware.
+
+12.8 【今日阅读】https://vickiboykis.com/2022/12/05/the-cloudy-layers-of-modern-day-programming/ Recently, I’ve come to the realization that much of what we do in modern software development is not true software engineering. We spend the majority of our days trying to configure OpenSprocket 2.3.1 to work with NeoGidgetPro5, both of which were developed by two different third-party vendors and available as only as proprietary services in FoogleServiceCloud.
+
+The name of this activity is, brilliantly summarized as VendorOps, from this blog post
+
 12.7 【今日阅读】https://github.com/google/go-flow-levee An input program's data flow is explored using a combination of pointer analysis, static single assignment analysis, and taint analysis. "Sources" must not reach "sinks" without first passing through a "sanitizer." Additionally, source data can "taint" neighboring variables during a "propagation" function call, such as writing a source to a string. Such tainted variables also must not reach any sink.
 
 12.6 【今日阅读】https://driftingin.space/posts/you-might-not-need-a-crdt Although CRDTs aren’t always the best solution for always-online collaborative apps, it’s still fascinating tech that has real use cases. Apps that need to run offline in general are good candidates for CRDTs.
