--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,15 @@
+12.19 【今日阅读】https://inspirezone.tech/9-indispensable-rules-for-debugging-software-and-hardware/ 9 Indispensable Rules for Debugging Software and Hardware (Book review)
+
+12.18 【今日阅读】https://codersatwork.com/ Based on nearly eighty hours of conversations with fifteen all-time great programmers and computer scientists, the Q&A interviews in Coders at Work provide a multifaceted view into how great programmers learn to program, how they practice their craft, and what they think about the future of programming.
+
+12.17 【今日阅读】https://antonio-cooler.gitbook.io/coolervoid-tavern/detecting-heap-memory-pitfalls Rules to detect Heap security pitfalls
+
+12.16 【今日阅读】https://austinhenley.com/blog/morechallengingprojects.html One year ago, I posted Challenging projects every programmer should try. It included a text editor, Space Invaders, a BASIC compiler, a small operating system, a spreadsheet, and a video game console emulator. It blew up across the internet, amassing over 100,000 views in a month (read more about it going viral). I'm now expanding the list with more "modern" projects: Ray tracer, Key-value store web API, Web browser, Stock trading bot
+
+12.15 【今日阅读】https://xi-editor.io/docs/crdt.html CRDT - An approach to async plugins and undo
+
+12.14 【今日阅读】https://www.youtube.com/playlist?list=PL6CJYn40gN6hLwcJ2cgLNtsbr6zUMZSEJ This series will give you an overview of debugging and profiling techniques for C/C++ (and Qt) applications, as well as graphics optimizations tools for OpenGL.
+
 12.13 【今日阅读】https://concerningquality.com/models/ I’ve become a bit model-obsessed as of late. By “model,” I mean a simplified representation of a program. No databases. No HTTP. Just pure logic. What interests me so much about models is that they exemplify software minimalism. We often talk about essential vs. accidental complexity - well, models are the embodiment of the essential. We have an ongoing battle against complexity at the language level, with tons of new languages providing support for immutability, reference sharing control, and other features of modern semantics. But I can’t help but still ask: is it really enough? Is software really getting any simpler?
 
 12.12 【今日阅读】https://github.com/facebookresearch/metaseq/blob/main/projects/OPT/chronicles/README.md logbook from training the GPT-3 sized OPT model
